--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -34,7 +34,6 @@
             android:layout_height="wrap_content">
 
             <Button
-
                 android:layout_width="10dp"
                 android:layout_height="120dp"
                 android:layout_weight="4"
@@ -45,14 +44,12 @@
                 android:layout_height="120dp"
                 android:layout_weight="4" />
             <Button
-                android:text="@string/message"
+                android:text="@string/calendar"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_weight="4" />
 
-
             <Button
-
                 android:layout_width="10dp"
                 android:layout_height="120dp"
                 android:layout_weight="4"
