--- a/app/src/main/res/layout/fragment_result_qr.xml
+++ b/app/src/main/res/layout/fragment_result_qr.xml
@@ -57,4 +57,11 @@
         android:layout_height="wrap_content"
         android:text="Result QR" />
 
+    <Button
+        android:id="@+id/btnsubmit"
+        android:text="Submit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
 </LinearLayout>
