--- a/app/src/main/res/layout/fragment_list_event.xml
+++ b/app/src/main/res/layout/fragment_list_event.xml
@@ -103,7 +103,7 @@
             android:layout_width="wrap_content"
             android:layout_height="150dp"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/openhouse" />
+            android:src="@drawable/e1" />
         <LinearLayout
             android:layout_gravity="center_vertical"
             android:orientation="horizontal"
@@ -121,10 +121,52 @@
         </LinearLayout>
 
         <ImageView
-            android:layout_width="250dp"
-            android:layout_height="165dp"
+            android:layout_width="wrap_content"
+            android:layout_height="150dp"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/kpsd" />
+            android:src="@drawable/e2" />
+                <LinearLayout
+                    android:layout_gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="0.5dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text=""
+                        android:textSize="@dimen/h5"
+                        android:textStyle="" />
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_width="250dp"
+                    android:layout_height="165dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/kpsd" />
+                <LinearLayout
+                    android:layout_gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="0.5dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text=""
+                        android:textSize="@dimen/h5"
+                        android:textStyle="" />
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="150dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/openhouse" />
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
