--- a/app/src/main/res/layout/fragment_checkevent.xml
+++ b/app/src/main/res/layout/fragment_checkevent.xml
@@ -4,8 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CheckeventFragment">
-
+    <!--Toolbar-->
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/ToolbarEven"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
     <!-- TODO: Update blank fragment layout -->
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
