--- a/app/src/main/res/layout/fragment_list_event.xml
+++ b/app/src/main/res/layout/fragment_list_event.xml
@@ -16,7 +16,7 @@
 
         <!--Toolbar-->
         <android.support.v7.widget.Toolbar
-            android:id="@+id/ToolbarEven"
+            android:id="@+id/toolbarEven"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimary"
@@ -169,6 +169,7 @@
                     android:src="@drawable/openhouse" />
             </LinearLayout>
         </ScrollView>
+
     </LinearLayout>
 
 
